[package]
name = "extract_article"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
dirs = "6.0.0"
html5ever = "0.27.0"
markup5ever_rcdom = "0.3.0"
reqwest = { version = "0.12.4", features = ["gzip"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.37.0", features = ["full"] }
